fixed my spacing

--- a/aboutus.css
+++ b/aboutus.css
@@ -3,7 +3,7 @@
   width: 35%;
   margin: auto;
   margin-top: 210px;
-  align-items: center;
+  text-align: center;
 }
 
 #aboutus {
